Add support to 1.21.11 & fix on paper